--- a/index.ipynb
+++ b/index.ipynb
@@ -455,7 +455,7 @@
    },
    "outputs": [],
    "source": [
-    "name=Liz Kapl # 'Liz Kaplan'"
+    "name=Liz Kaplan # 'Liz Kaplan'"
    ]
   },
   {
@@ -466,7 +466,7 @@
    },
    "outputs": [],
    "source": [
-    "email # 'liz@ka-plan.com'"
+    "email=liz# 'liz@ka-plan.com'"
    ]
   },
   {
