Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -466,7 +466,7 @@
    },
    "outputs": [],
    "source": [
-    "email=liz# 'liz@ka-plan.com'"
+    "email=liz@ka-plan.# 'liz@ka-plan.com'"
    ]
   },
   {
