Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -462,7 +462,7 @@
     }
    ],
    "source": [
-    "name=Liz Kaplan' # 'Liz Kaplan'"
+    "name='Liz Kaplan' # 'Liz Kaplan'"
    ]
   },
   {
@@ -473,7 +473,7 @@
    },
    "outputs": [],
    "source": [
-    "email=liz@ka-plan.com# 'liz@ka-plan.com'"
+    "email='liz@ka-plan.com'# 'liz@ka-plan.com'"
    ]
   },
   {
